Fix spacing issue in .keywords container

--- a/styles.css
+++ b/styles.css
@@ -194,6 +194,10 @@ article {
   row-gap: 15px;
 }
 
+span {
+  margin: 0 5px 5px 0;
+}
+
 .headline-link {
   color: black;
   grid-area: headline;
@@ -223,7 +227,6 @@ article {
   background: #00000005;
   border-radius: 2px;
   border: 1px solid #00000010;
-  margin: 0 10px 4px 0;
   padding: 3px;
 }
 
